Update colors and styling in dashboard components and app layout
Changes include:
- Updated background color for app.html and Header component
- Changed text and icon colors in Header and Navbar components
- Modified SearchBar sty

--- a/codingmagic/src/app.html
+++ b/codingmagic/src/app.html
@@ -24,6 +24,7 @@
     scroll-behavior: smooth;
     margin: 0;
     padding: 0;
+    background-color: #f8f0ff;
     box-sizing: border-box;
     font-family: "Quicksand", sans-serif;
     font-size: 62.5%;
