--- a/codingmagic/src/app.html
+++ b/codingmagic/src/app.html
@@ -24,7 +24,7 @@
     scroll-behavior: smooth;
     margin: 0;
     padding: 0;
-    background-color: #f8f0ff;
+    background-color: black;
     box-sizing: border-box;
     font-family: "Quicksand", sans-serif;
     font-size: 62.5%;
